--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
 		<main>
 			<!--Courses -->
 			<section>
-				<h3>Courses &amp; Workshops</h3>
+				<h3>kursy</h3>
+				<article class='course'>
+					<div class='title'>
+						<h4>CodeIsAwsome - My First Course</h4>
+					</div>
+					<div class="descrition">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non iaculis mi, vel lacinia odio. Nam eget nisi in ante fermentum consectetur. Vivamus metus dui, placerat vel arcu eu, interdum faucibus magna.</p>
+					</div>
+				</article>
+				
+				<article class='course'>
+					<div class='title'>
+						CodeIsAwsome - My First Course
+					</div>
+					<div class="descrition">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non iaculis mi, vel lacinia odio. Nam eget nisi in ante fermentum consectetur. Vivamus metus dui, placerat vel arcu eu, interdum faucibus magna.</p>
+					</div>
+				</article>
+				
 				<article class='course'>
 					<div class='title'>
 						CodeIsAwsome - My First Course
@@ -35,22 +53,22 @@
 			</section>
 			<!-- Skilss -->
 			<section>
-				<h3>Skills</h3>
+				<h3>Umiejętności</h3>
 
 				... put your code here ...
 
 			</section>
 			<!-- Education -->
 			<section>
-				<h3>...some title...</h3>
-	      <article>
-	        <div class='school'>
-	          <span>2015-2018</span> Octocats tech academy
-	        </div>
-	        <div class="descrition">
-	          Bechelor Degree of Octorobotics
-	        </div>
-	      </article>
+				<h3>Edukacja</h3>
+                <article>
+                  <div class='school'>
+                    <span>2015-2018</span> Octocats tech academy
+                  </div>
+                  <div class="descrition">
+                    Bechelor Degree of Octorobotics
+                  </div>
+                </article>
 			</section>
 			<!-- Experience / Projects / Portfolio ... -->
 
