--- a/index.html
+++ b/index.html
@@ -54,8 +54,36 @@
 			<!-- Skilss -->
 			<section>
 				<h3>Umiejętności</h3>
-
-				... put your code here ...
+				
+				<div class="skills">
+				  <div class="column">
+				    <h4>Good Knowlage</h4>
+				    <ul>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				    </ul>
+				  </div>
+				  <div class="column">
+				    <h4>Basic Knowledge</h4>
+				    <ul>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				    </ul>
+				  </div>
+				  <div class="column">
+                    <h4>Other Knowledge</h4>
+				    <ul>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				      <li>umiejętność</li>
+				    </ul>
+                  </div>
+				</div>
 
 			</section>
 			<!-- Education -->
