add favicon and Font Awesome

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="description" content="CV Sebastian Adamek">
   <meta name="author" content="Sebastian Adamek">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,6 +21,11 @@
     <h1>Sebastian Adamek</h1>
     <section>
       <p>Hello! I am Sebastian Adamek. I work as interface and front-end developer. I have passion for pixel perfect, minimal and easy to use interfaces. I'm focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
+    </section>
+    <section class="link">
+      <a href="" class="menu"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://github.com/SebastianAdamek" class="menu" target="_blank"><i class="fab fa-github-alt"></i></a>
+      <a href="" class="menu"><i class="fab fa-linkedin-in"></i></a>
     </section>
   </header>
   <main>
